--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             font-size: 16px;
             font-family: sans-serif;
             color: var(--app-text-color);
+            width: 100%;
         }
 
         #app {
