styling and add manifest

--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="theme-color" content="#7f8ff4"/>
     <title>TODO-list</title>
+    <link rel="manifest" href="manifest.json">
+    <!--...-->
+    <script>
+        if ('serviceWorker' in navigator) {
+            // window.addEventListener('load', function () {
+            //     navigator.serviceWorker.register("/service-worker.js", {
+            //         scope: '/'
+            //     });
+            // })
+        } else {
+            console.log('Use another cache method :(');
+        }
+    </script>
     <style>
         * {
             box-sizing: border-box;
