--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <!--...-->
     <script>
         if ('serviceWorker' in navigator) {
-            // window.addEventListener('load', function () {
-            //     navigator.serviceWorker.register("/sw.js", {
-            //         scope: '/'
-            //     });
-            // })
+            window.addEventListener('load', function () {
+                navigator.serviceWorker.register("/sw.js", {
+                    scope: '/'
+                });
+            })
         } else {
             console.log('Use another cache method :(');
         }
